# Restobot

./: Procfile  Readme.md  manage.py  pyproject.toml  requirements.txt
Documentation/: Template_Final project.pptx  project_scheme.drawio
Restobot/: asgi.py  config.py  settings.py  settings_development.py  urls.py  wsgi.py
react/: tailwind.config.js
react/restobot-admin/: package-lock.json  package.json
react/restobot-admin/public/: index.html
react/restobot-admin/src/Components/: App.js  Dish.css  Dish.js  DishList.js  (+5 more)
restobot_api/: DJANGO - new proj.txt  admin.py  apps.py  custom_storage.py  models.py  serializers.py  urls.py  views.py
restobot_api/management/commands/: bot.py  config_reader.py  restaraunt.py
restobot_api/migrations/: 0001_initial.py  0002_chat.py  0002_group_dish_group.py  0003_alter_dish_categories.py  0003_chat_is_new.py  0004_alter_dish_categories.py  0004_alter_order_number.py  0005_alter_dish_picture.py  0006_alter_dish_picture.py  0007_alter_dish_picture.py  0007_client_order_order_items.py  0008_order_phone_number_alter_order_client.py  0009_rename_order_items_order_item_order_value.py
restobot_api/utils/: config_reader.py
telegram_bot/: bot_handler.py  image_finder.py  message_listener.py  utils.py
telegram_bot/classes/: Cart.py  Order.py  Restaraunt.py  User.py
telegram_bot/keybords/: buttons.py  dish_keyboard.py  home_keyboard.py  menu_keyboard.py  order_button.py  order_place_button.py
telegram_bot/models_connectors/: chat_model.py  client_model.py  dish_model.py  group_model.py  order_model.py  restaurant_model.py
