[tool.poetry]
name = "restobot"
version = "0.1.0"
description = ""
authors = ["DmitryArtamonov <artamonov2009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
