[tool.poetry]
name = "restobot"
version = "0.1.0"
description = ""
authors = ["DmitryArtamonov <artamonov2009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"
pydantic = "^2.1.1"
aiogram = "3.0.0rc1"
pillow = "^10.0.0"
psycopg2 = "^2.9.7"
pydantic-settings = "^2.0.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
